Funktionel lyspære for fire rum
Funktionel lyspære til fire rum - resten er udeladt indtil videre, da
billederne overlapper teksten..

Kommer også an på prioritet.

--- a/SmartHouseControl/SmartHouseControl/css/main.css
+++ b/SmartHouseControl/SmartHouseControl/css/main.css
@@ -663,3 +663,31 @@ a:after {
     margin-top:20px;
     margin-left:20px;
 }
+
+#guestRoomDiv
+{
+    width: auto;
+    height: 400px;
+    background-position:center;
+    background-image: url('../images/GuestRoom.PNG');
+    background-repeat: no-repeat;
+}
+#myGuestRoom
+{
+    margin-top:20px;
+    margin-left:20px;
+}
+
+#diningRoomDiv
+{
+    width: auto;
+    height: 400px;
+    background-position:center;
+    background-image: url('../images/DiningRoom.PNG');
+    background-repeat: no-repeat;
+}
+#myDiningRoom
+{
+    margin-top:50px;
+    margin-left:20px;
+}
