Changed lock in Javascript
Changed, so the consistency is better.

--- a/SmartHouseControl/SmartHouseControl/css/main.css
+++ b/SmartHouseControl/SmartHouseControl/css/main.css
@@ -691,3 +691,15 @@ a:after {
     margin-top:50px;
     margin-left:20px;
 }
+
+#floorPlanDiv
+{
+    width: auto;
+    height: 400px;
+    background-position:center;
+    background-repeat: no-repeat;
+}
+#myFloorPlan
+{
+    
+}
