--- a/SmartHouseControl/SmartHouseControl/css/main.css
+++ b/SmartHouseControl/SmartHouseControl/css/main.css
@@ -727,3 +727,27 @@ input.qtyminuskitchen { width:25px; height:25px;}
 }
 input.qtypluslivingroom { width:25px; height:25px;}
 input.qtyminuslivingroom { width:25px; height:25px;}
+
+#guestRoomForm {
+    text-align: center;
+    padding: 2px;
+}
+.qty {
+    width: 40px;
+    height: 25px;
+    text-align: center;
+}
+input.qtyplusguestroom { width:25px; height:25px;}
+input.qtyminusguestroom { width:25px; height:25px;}
+
+#diningRoomForm {
+    text-align: center;
+    padding: 2px;
+}
+.qty {
+    width: 40px;
+    height: 25px;
+    text-align: center;
+}
+input.qtyplusdiningroom { width:25px; height:25px;}
+input.qtyminusdiningroom { width:25px; height:25px;}
